tests/e2e/networking/00-asserts.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: operator-lifecycle-manager
    app.kubernetes.io/name: tempo-operator
    app.kubernetes.io/part-of: tempo-operator
    control-plane: controller-manager
  name: tempo-operator-deny-all
  namespace: tempo-operator-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: operator-lifecycle-manager
      app.kubernetes.io/name: tempo-operator
      app.kubernetes.io/part-of: tempo-operator
      control-plane: controller-manager
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: operator-lifecycle-manager
    app.kubernetes.io/name: tempo-operator
    app.kubernetes.io/part-of: tempo-operator
    control-plane: controller-manager
  name: tempo-operator-ingress-to-metrics
  namespace: tempo-operator-system
spec:
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector: {}
    ports:
    - port: metrics
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: operator-lifecycle-manager
      app.kubernetes.io/name: tempo-operator
      app.kubernetes.io/part-of: tempo-operator
      control-plane: controller-manager
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: operator-lifecycle-manager
    app.kubernetes.io/name: tempo-operator
    app.kubernetes.io/part-of: tempo-operator
    control-plane: controller-manager
  name: tempo-operator-allow-dns
  namespace: tempo-operator-system
spec:
  egress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: operator-lifecycle-manager
      app.kubernetes.io/name: tempo-operator
      app.kubernetes.io/part-of: tempo-operator
      control-plane: controller-manager
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: operator-lifecycle-manager
    app.kubernetes.io/name: tempo-operator
    app.kubernetes.io/part-of: tempo-operator
    control-plane: controller-manager
  name: tempo-operator-egress-to-apiserver
  namespace: tempo-operator-system
spec:
  egress:
  - ports:
    - port: 6443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: operator-lifecycle-manager
      app.kubernetes.io/name: tempo-operator
      app.kubernetes.io/part-of: tempo-operator
      control-plane: controller-manager
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: operator-lifecycle-manager
    app.kubernetes.io/name: tempo-operator
    app.kubernetes.io/part-of: tempo-operator
    control-plane: controller-manager
  name: tempo-operator-ingress-webhook
  namespace: tempo-operator-system
spec:
  ingress:
  - ports:
    - port: 443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: operator-lifecycle-manager
      app.kubernetes.io/name: tempo-operator
      app.kubernetes.io/part-of: tempo-operator
      control-plane: controller-manager
  policyTypes:
  - Ingress
